hide blog and docusaurus docs from production

--- a/packages/site/docs/getting-started/installation.mdx
+++ b/packages/site/docs/getting-started/installation.mdx
@@ -15,8 +15,8 @@ import {
 
 Requirements:
 
-- **React 18.2** or later
-- **React DOM 18.2** or later
+- **React 18.2** or later - `react`
+- **React DOM 18.2** or later - `react-dom`
 
 ## Installing the package
 
