--- a/packages/site/docs/components/popover.mdx
+++ b/packages/site/docs/components/popover.mdx
@@ -1,6 +1,7 @@
 import PopoverUsage from '@site/src/components/docs/Popover/PopoverUsage';
 import PopoverPlacements from '@site/src/components/docs/Popover/PopoverPlacements';
 import PopoverControlled from '@site/src/components/docs/Popover/PopoverControlled';
+import PopoverOffset from '@site/src/components/docs/Popover/PopoverOffset';
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import CodeBlock from '@theme/CodeBlock';
@@ -8,6 +9,7 @@ import {
   popoverControlledTsx,
   popoverPlacementsTsx,
   popoverUsageTsx,
+  popoverOffsetTsx,
 } from '@site/docs/components/_snippets/popover';
 
 # Popover
@@ -69,5 +71,16 @@ Compound pattern is also supported:
   </TabItem>
   <TabItem value="code" label="Code">
     <CodeBlock language="tsx">{popoverControlledTsx}</CodeBlock>
+  </TabItem>
+</Tabs>
+
+## Offset
+
+<Tabs>
+  <TabItem value="preview" label="Preview" default className="preview-tab">
+    <PopoverOffset />
+  </TabItem>
+  <TabItem value="code" label="Code">
+    <CodeBlock language="tsx">{popoverOffsetTsx}</CodeBlock>
   </TabItem>
 </Tabs>
