--- a/packages/site/docs/components/popover.mdx
+++ b/packages/site/docs/components/popover.mdx
@@ -2,6 +2,7 @@ import PopoverUsage from '@site/src/components/docs/Popover/PopoverUsage';
 import PopoverPlacements from '@site/src/components/docs/Popover/PopoverPlacements';
 import PopoverControlled from '@site/src/components/docs/Popover/PopoverControlled';
 import PopoverOffset from '@site/src/components/docs/Popover/PopoverOffset';
+import PopoverWithForm from '@site/src/components/docs/Popover/PopoverWithForm';
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import CodeBlock from '@theme/CodeBlock';
@@ -10,6 +11,7 @@ import {
   popoverPlacementsTsx,
   popoverUsageTsx,
   popoverOffsetTsx,
+  popoverWithFormTsx,
 } from '@site/docs/components/_snippets/popover';
 
 # Popover
@@ -82,5 +84,16 @@ Compound pattern is also supported:
   </TabItem>
   <TabItem value="code" label="Code">
     <CodeBlock language="tsx">{popoverOffsetTsx}</CodeBlock>
+  </TabItem>
+</Tabs>
+
+## With Form
+
+<Tabs>
+  <TabItem value="preview" label="Preview" default className="preview-tab">
+    <PopoverWithForm />
+  </TabItem>
+  <TabItem value="code" label="Code">
+    <CodeBlock language="tsx">{popoverWithFormTsx}</CodeBlock>
   </TabItem>
 </Tabs>
