--- a/packages/site/docs/components/popover.mdx
+++ b/packages/site/docs/components/popover.mdx
@@ -7,6 +7,7 @@ import PopoverBackdrop from '@site/src/components/docs/Popover/PopoverBackdrop';
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import CodeBlock from '@theme/CodeBlock';
+import Link from '@docusaurus/Link';
 import {
   popoverControlledTsx,
   popoverPlacementsTsx,
@@ -20,7 +21,7 @@ import {
 
 A Popover is a non-modal overlay that anchors itself to a trigger element. Unlike a standard tooltip, it is designed to hold interactive rich content such as forms, lists, or navigation, without breaking the user's current context.
 
-Popover is used as an underlying component for other components like **Dropdown** and **Select**.
+Popover is used as an underlying component for other components like <Link to='/docs/components/dropdown'>Dropdown</Link> and <Link to='/docs/components/select'>Select</Link>.
 
 ## Key Characteristics
 
