--- a/packages/site/docs/components/tooltip.mdx
+++ b/packages/site/docs/components/tooltip.mdx
@@ -1,7 +1,8 @@
 import TooltipUsage from '@site/src/components/docs/Tooltip/TooltipUsage';
 import TooltipPlacements from '@site/src/components/docs/Tooltip/TooltipPlacements';
 import TooltipControlled from '@site/src/components/docs/Tooltip/TooltipControlled';
-import TooltipDelay from '@site/src/components/docs/Tooltip/TooltipDelay';
+import TooltipDelayShow from '@site/src/components/docs/Tooltip/TooltipDelayShow';
+import TooltipDelayHide from '@site/src/components/docs/Tooltip/TooltipDelayHide';
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import CodeBlock from '@theme/CodeBlock';
@@ -10,7 +11,8 @@ import {
   tooltipControlledTsx,
   tooltipPlacementsTsx,
   tooltipUsageTsx,
-  tooltipDelayTsx,
+  tooltipDelayShowTsx,
+  tooltipDelayHideTsx,
 } from '@site/docs/components/_snippets/tooltip';
 
 # Tooltip
@@ -51,16 +53,29 @@ import { Tooltip } from '@andrejground/lab';
   </TabItem>
 </Tabs>
 
-## Delay
+## Delay Show
 
 Control the delay before showing the tooltip with `delayShow` prop.
 
 <Tabs>
   <TabItem value="preview" label="Preview" default className="preview-tab">
-    <TooltipDelay />
+    <TooltipDelayShow />
   </TabItem>
   <TabItem value="code" label="Code">
-    <CodeBlock language="tsx">{tooltipDelayTsx}</CodeBlock>
+    <CodeBlock language="tsx">{tooltipDelayShowTsx}</CodeBlock>
+  </TabItem>
+</Tabs>
+
+## Delay Hide
+
+Control the delay before hiding the tooltip with `delayHide` prop.
+
+<Tabs>
+  <TabItem value="preview" label="Preview" default className="preview-tab">
+    <TooltipDelayHide />
+  </TabItem>
+  <TabItem value="code" label="Code">
+    <CodeBlock language="tsx">{tooltipDelayHideTsx}</CodeBlock>
   </TabItem>
 </Tabs>
 
