add hoverableContent to tooltip docs

--- a/packages/site/docs/components/popover.mdx
+++ b/packages/site/docs/components/popover.mdx
@@ -21,7 +21,7 @@ import {
 
 A Popover is a non-modal overlay that anchors itself to a trigger element. Unlike a standard tooltip, it is designed to hold interactive rich content such as forms, lists, or navigation, without breaking the user's current context.
 
-Popover is used as an underlying component for other components like <Link to='/docs/components/dropdown'>Dropdown</Link> and <Link to='/docs/components/select'>Select</Link>.
+Popover is used as an underlying component for other components like <Link to='/docs/components/dropdown'>Dropdown</Link>, <Link to='/docs/components/select'>Select</Link> and <Link to='/docs/components/tooltip'>Tooltip</Link>.
 
 ## Key Characteristics
 
