implement triggerWrapper on Popover level

--- a/packages/site/docs/components/tooltip.mdx
+++ b/packages/site/docs/components/tooltip.mdx
@@ -83,7 +83,7 @@ Control the delay before hiding the tooltip with `delayHide` prop.
 
 ## Hoverable Content
 
-Use the `hoverableContent` prop to keep the tooltip visible when the user hovers over the tooltip content itself.
+Use `hoverableContent` prop to keep the tooltip visible when hovering over the tooltip content.
 
 <Tabs>
   <TabItem value="preview" label="Preview" default className="preview-tab">
